[#2294] Cleaned up old URLs

--- a/webaxis/src/org/cougaar/lib/web/axis/package.html
+++ b/webaxis/src/org/cougaar/lib/web/axis/package.html
@@ -52,5 +52,5 @@ both of the above example uses:<ul>
 </ul>
 <p>
 For more detail, see the
-<a href="http://docs.cougaar.org">Cougaar Developers' Guide</a>.
+<a href="http://cougaar.org/doc/11_4/online/CDG_11_4.pdf">Cougaar Developers' Guide</a>.
 </body>
